# kg-from-scratch

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml  get-started.md  plan.md  pyproject.toml
scripts/: build.py  convert_pdfs.py
src/: agent.py  build_graph.py  clean_graph.py  confidence.py  config.py  embed.py  extract.py  graph.py  ingest.py  ner.py  pdf_convert.py  resolve.py  tokenize_graph.py
tests/: test_confidence.py  test_ingest.py  test_ner.py
